# Celestia-Memoria

./: .gitignore  .prettierignore  API.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
apps/web/: .env.example  Dockerfile  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
data/: README.md
services/ai-backend/: .env.example  Dockerfile  pyproject.toml
services/ai-backend/app/: config.py  main.py
services/ai-backend/app/agents/: graph.py  state.py
services/ai-backend/app/agents/nodes/: retrieval_node.py  router_node.py  synthesis_node.py
services/ai-backend/app/api/middleware/: auth.py
services/ai-backend/app/api/routes/: ingest.py  query.py
services/ai-backend/app/db/: local_client.py  supabase_client.py
services/ai-backend/app/ingest/: chunker.py  clause_extractor.py  embedder.py  metadata.py  pdf_parser.py  pipeline.py
services/ai-backend/app/llm/: openrouter.py
services/ai-backend/app/retrieval/: bm25_encoder.py  hybrid_retriever.py  pinecone_client.py  reranker.py
services/ai-backend/app/watcher/: auto_ingest.py  directory_watcher.py
services/ai-backend/tests/: conftest.py  test_api_endpoints.py  test_auth_middleware.py  test_chunker.py  test_config.py  test_embedder.py  test_hybrid_retriever.py  test_metadata.py  test_reranker.py
services/ai-backend/tests/evaluation/: conftest.py  test_citation_accuracy.py  test_grounding.py  test_refusal.py
(+71 files in other folders)
