[project]
name = "celestia-memoria-backend"
version = "0.1.0"
description = "RAG-powered AI assistant backend for aviation regulatory documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "langserve>=0.3.0",
    "pinecone>=6.0.0",
    "pinecone-text>=0.9.0",
    "supabase>=2.15.0",
    "cohere>=5.15.0",
    "pymupdf4llm>=0.0.17",
    "tiktoken>=0.9.0",
    "numpy>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "watchdog>=6.0.0",
    "httpx>=0.28.0",
    "sentence-transformers>=3.4.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "evaluation: evaluation tests for citation accuracy, grounding, and refusal",
    "integration: tests requiring Ollama or external APIs",
]
